# SGPacMan

./: .gitignore  LICENSE.txt  README.txt
CB/: PacMan_Mingw.cbp  PacMan_Mingw.depend  PacMan_Mingw.layout  default.workspace.layout
CB/Open/: sgf_configuration.xml  sgf_debug_conf - Cópia.xml  sgf_debug_conf.xml
CB/data/: PacManConfig.xml  pacman.conf  pacman.xml  settings.conf
CB/levels/: level.xml  map
CB/levels/0/: level.xml
CB/levels/1/: level.xml
CB/levels/2/: level.xml
CB/levels/3/: level.xml
CB/levels/new/: level.xml
CB/levels/tmp/: level.xml
VC/: PacMan.rc  PacMan.sln  PacMan.vcxproj  PacMan.vcxproj.filters  PacMan_VS2010.sln  PacMan_VS2010.vcxproj
VC/PacManSetup/PacManSetup/: PacManSetup.sln
VC/PacManSetup/PacManSetup/PacManSetup/: PacManSetup.isl
doc/: PACMAN.docx
doc/pacman-returns ico/: IconHot.com.url  IconHot.txt  license.txt
sgf/3.0/headers/: SGF.h
sgf/3.0/headers/ExternalLibs/7z/: CMakeLists.txt  CpuArch.c  XzDec.c
sgf/3.0/headers/ExternalLibs/SDL2_gfx-1.0.1/: SDL2_gfxPrimitives.c  SDL2_gfxPrimitives.h
sgf/3.0/headers/ExternalLibs/SDL2_image-2.0.0/: .directory  CMakeLists.txt  IMG_bmp.c  IMG_jpg.c  IMG_pnm.c  Makefile  SDL_image.h  command  config.status  libtool  miniz.h
sgf/3.0/headers/ExternalLibs/SDL2_mixer-2.0.0/: .directory  CMakeLists.txt  SDL_mixer.h  effect_position.c  effects_internal.c  load_voc.c  mixer.c
sgf/3.0/headers/ExternalLibs/SDL2_mixer-2.0.0/native_midi/: .directory  CMakeLists.txt  native_midi_common.c  native_midi_win32.c
sgf/3.0/headers/ExternalLibs/SDL2_mixer-2.0.0/timidity/: CMakeLists.txt  common.c  filter.c  readmidi.c  resample.c  timidity.c
sgf/3.0/headers/ExternalLibs/SDL2_ttf-2.0.12/: CMakeLists.txt  SDL_ttf.h
sgf/3.0/headers/ExternalLibs/SDL_gfx-2.0.24/: .directory  CMakeLists.txt  SDL_gfxBlitFunc.c  SDL_gfxPrimitives.c
sgf/3.0/headers/ExternalLibs/SFL2.0src/: .directory  CMakeLists.txt  prelude.h  prelude_old.h  sfl.h  sflcons.c  sfldir.c  sfldir.h  sflfile.c  sflfile.h  sfllist.c  sfllist.h  sflmem.c  sflstr.c  sflstr.h  sflsyst.c  sfltok.c  sfluid.c
sgf/3.0/headers/ExternalLibs/expat-2.1.0/: CMakeLists.txt  expat.sln
sgf/3.0/headers/ExternalLibs/hawknl/: CMakeLists.txt
sgf/3.0/headers/ExternalLibs/jpeg-9/: .directory  Makefile  cjpeg  config.status  djpeg  jpegtran  libtool  rdjpgcom  wrjpgcom
sgf/3.0/headers/ExternalLibs/md5/: CMakeLists.txt
sgf/3.0/headers/ExternalLibs/pcre/: CMakeLists.txt  pcre_scanner.h  pcre_stringpiece.h  pcrecpparg.h
sgf/3.0/headers/ExternalLibs/sge2d/: CMakeLists.txt
sgf/3.0/headers/ExternalLibs/sge2d/include/: sge.h  sge_bm_text.h  sgearray.h  sgecontrol.h  sgedefines.h  sgeevent.h  sgefadefx.h  sgefont.h  sgegamestate.h  sgegfx.h  sgegp2x.h  sgeinit.h  sgelist.h  sgemisc.h  sgeparticles.h  sgepathfinder.h  sgeresource.h  sgescreen.h  sgesound.h  sgesprite.h  sgespritegroup.h  sgespriteimage.h  sgestage.h  sgestring.h
sgf/3.0/headers/ExternalLibs/sge2d/src/: sge_bm_text.cpp  sgearray.c  sgecontrol.c  sgeevent.c  sgefadefx.c  sgefont.cpp  sgegamestate.c  sgegfx.c  sgeinit.c  sgelist.c  sgemisc.c  sgeparticles.c  sgepathfinder.c  sgeresource.c  sgescreen.c  sgesound.c  sgesprite.c  sgespritegroup.c  sgespriteimage.c  sgestage.c  sgestring.c
sgf/3.0/headers/ExternalLibs/sha1-c/: CMakeLists.txt
sgf/3.0/headers/ExternalLibs/zip/: CMakeLists.txt  ioapi.c  unzip.c
sgf/3.0/headers/Gamecore/: SGF.h  SGF_Config.h  SGF_Global.h  open.pot  openmugen.pot  sdl.h
sgf/3.0/headers/Gamecore/ai/: SGF_AstarHeap.h  SGF_AstarLib.h  SGF_Behavior.h  SGF_Map.h  SGF_PathFinder.h  all.h
sgf/3.0/headers/Gamecore/compiler/: FlexLexer.h  altracoes_necessarias.txt  lex.Cmd.cc  lex.Com.cc  unistd.h
sgf/3.0/headers/Gamecore/configuration/: SGF_CmdVars.h  SGF_ConfigVars.h  SGF_Configuration.h  SGF_SysVars.h  SGF_SysVarsyyy.h  all.h
sgf/3.0/headers/Gamecore/environment/: all.h  atmosphere.cpp  fog_atmosphere.cpp  night_atmosphere.cpp  rain_atmosphere.cpp  snow_atmosphere.cpp
sgf/3.0/headers/Gamecore/exceptions/: SGF_FileExceptions.h  SGF_MenuException.h  SGF_MugenException.h  SGF_NetException.h  SGF_ScriptException.h  SGF_ShutdownException.h  SGF_TokenException.h  all.h
sgf/3.0/headers/Gamecore/game/: SGF_Command.h  SGF_Console.h  SGF_Control.h  SGF_Mod.h  SGF_Stage.h  SGF_Theater.h  SGF_World.h  all.h
sgf/3.0/headers/Gamecore/graphics/: SGF_Bitmap.h  SGF_Color.h  SGF_FireEffect.h  SGF_GradientEffect.h  SGF_LitBitmap.h  SGF_Poligon.h  SGF_TransBitmap.h  all.h
sgf/3.0/headers/Gamecore/gui/: SGF_BoundBox.h  SGF_Box.h  SGF_ContextBox.h  SGF_Coordinate.h  SGF_FadetoolGui.h  SGF_GuiAnimation.h  SGF_GuiTimer.h  SGF_LineEdit.h  SGF_PopupBox.h  SGF_Rectarea.h  SGF_ScrollList.h  SGF_SelectList.h  SGF_TabbedBox.h  SGF_Widget.h  all.h
sgf/3.0/headers/Gamecore/input/: SGF_ButtonMapping.h  SGF_Events.h  SGF_FrameControl.h  SGF_Input.h  SGF_InputManager.h  SGF_InputMap.h  SGF_InputSource.h  SGF_Joystick.h  SGF_KeyMapping.h  SGF_Keyboard.h  SGF_Mouse.h  SGF_PSPJoystick.h  SGF_StructsInput.h  SGF_TextInput.h  SGF_WIIJoystick.h  all.h  newInput.h  sdl-joystick.h
sgf/3.0/headers/Gamecore/level/: SGF_LevelUtils.h  all.h
sgf/3.0/headers/Gamecore/lists/: SGF_AirList.h  SGF_ImageList.h  SGF_PcxList.h  SGF_SndList.h  all.h  liststructs.h
sgf/3.0/headers/Gamecore/menu/: SGF_ActionFactory.h  SGF_ActionSpeed.h  SGF_Menu.h  SGF_MenuAction.h  SGF_MenuAnimation.h  SGF_MenuGlobal.h  SGF_MenuOption.h  SGF_MenuV2.h  SGF_OptionAdventure.h  SGF_OptionAdventureCpu.h  SGF_OptionChangeMod.h  SGF_OptionConfig.h  SGF_OptionCredits.h  SGF_OptionDummy.h  SGF_OptionFactory.h  SGF_OptionFullscreen.h  SGF_OptionInvencible.h  SGF_OptionJoystick.h  SGF_OptionKey.h  SGF_OptionLevel.h  SGF_OptionLives.h  SGF_OptionMenu.h  SGF_OptionNetworkHost.h  SGF_OptionNetworkJoin.h  SGF_OptionNpcBuddies.h  SGF_OptionPlayMode.h  SGF_OptionQuit.h  SGF_OptionScreenSize.h  SGF_OptionSelectFontV2.h  SGF_OptionSpeed.h  SGF_TabMenu.h  (+5 more)
src/: BckgrObj.cpp  BckgrObj.h  Game.cpp  Game.h  Ghost.cpp  Ghost.h  PacGlobal.h  Pacman.cpp  Pacman.h  Settings.cpp  Settings.h  Sounds.cpp  Sounds.h  hScore.cpp  hScore.h  main.cpp
(+540 files in other folders)
