# -------------------------------------------------------
# util cmake build script for sgffabric.
# Written by: Salvatore
# Modified by: Salvatore
# -------------------------------------------------------

# -------------------------------------------------------
# Source directories containing all the necessary .cpp files
# -------------------------------------------------------
set(SFL_SRC
sflcons.c
sflconv.c
sflcvsb.c
sfldate.c
sfldir.c
sflfile.c
sfllist.c
sflmem.c
sflnode.c
sflstr.c
sflsymb.c
sflsyst.c
sfltok.c
sfltron.c
sfluid.c
)

# -------------------------------------------------------
# Include directory
# -------------------------------------------------------

# -------------------------------------------------------
# module
# -------------------------------------------------------
#add_library (sfl_module ${SFL_SRC})
