# -------------------------------------------------------
# cmake build script for sgffabric.
# Written by: Salvatore
# -------------------------------------------------------

# -------------------------------------------------------
# Source directories containing all the necessary .cpp files
# -------------------------------------------------------
set(NATIVE_MIDI_SRC
native_midi_common.c
)

# -------------------------------------------------------
# module
# -------------------------------------------------------
#add_library (nativemidi_module ${NATIVE_MIDI_SRC})

# -------------------------------------------------------
#add_excutable (playmus.c )
#add_excutable (playwave.c)

